Find files for GC by reference count in InMemoryFileInfoStore